Added Experience, About, Contact and Outro sections

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,4 +4,11 @@
 @import "modules/bootstrap-flex";
 @import "modules/offcanvas-menu";
 
-@import "pages/common";
+@import "sections/common";
+@import "sections/intro";
+@import "sections/skills";
+@import "sections/portfolio";
+@import "sections/experience";
+@import "sections/about";
+@import "sections/contact";
+@import "sections/outro";
