--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5058,6 +5058,146 @@ h3, .h3 {
     top: 367px;
     left: 9px; } }
 
+/**
+ * TrackpadScrollEmulator
+ * Author: Jonathan Nicol @f6design
+ * https://github.com/jnicol/trackpad-scroll-emulator
+ */
+.tse-scrollable {
+  position: relative;
+  overflow: hidden; }
+
+.tse-scrollable .tse-scroll-content {
+  overflow: hidden;
+  overflow-y: scroll; }
+
+/* No longer using ::scrollbar too, since it breaks Chrome 25 */
+.tse-scrollable .tse-scroll-content::-webkit-scrollbar {
+  width: 0;
+  height: 0; }
+
+.tse-scrollbar {
+  z-index: 99;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 11px;
+  display: block !important; }
+
+.tse-scrollbar .drag-handle {
+  position: absolute;
+  right: 2px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  min-height: 10px;
+  width: 7px;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s linear;
+  -moz-transition: opacity 0.2s linear;
+  -o-transition: opacity 0.2s linear;
+  -ms-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear;
+  background: #000;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding; }
+
+.tse-scrollbar:hover .drag-handle {
+  /* When hovered, remove all transitions from drag handle */
+  opacity: 0.5;
+  -webkit-transition: opacity 0 linear;
+  -moz-transition: opacity 0 linear;
+  -o-transition: opacity 0 linear;
+  -ms-transition: opacity 0 linear;
+  transition: opacity 0 linear; }
+
+.tse-scrollbar .drag-handle.visible {
+  opacity: 0.5; }
+
+/* Used when testing the scrollbar width */
+/* No longer using ::scrollbar too, since it breaks Chrome 25 */
+.scrollbar-width-tester::-webkit-scrollbar {
+  width: 0;
+  height: 0; }
+
+/* Horizontal scroller */
+.tse-scrollable.horizontal .tse-scroll-content {
+  overflow-x: scroll;
+  overflow-y: hidden; }
+
+.tse-scrollable.horizontal .tse-scroll-content::-webkit-scrollbar,
+.tse-scrollable.horizontal .tse-scroll-content::scrollbar {
+  width: auto;
+  height: 0; }
+
+.tse-scrollable.horizontal .tse-scrollbar {
+  top: auto;
+  left: 0;
+  width: auto;
+  height: 11px; }
+
+.tse-scrollable.horizontal .tse-scrollbar .drag-handle {
+  right: auto;
+  top: 2px;
+  height: 7px;
+  min-height: 0;
+  min-width: 10px;
+  width: auto; }
+
+.carousel-inner {
+  height: 100%; }
+
+.modal-backdrop.in {
+  opacity: 1; }
+
+.modal-backdrop {
+  background-color: #fff; }
+
+.carousel-control {
+  position: fixed;
+  top: 48%;
+  color: #666;
+  text-shadow: none;
+  width: 90px;
+  height: 90px;
+  font-size: 9rem;
+  font-family: "worksans-thin", sans-serif;
+  opacity: 1; }
+  .carousel-control:focus, .carousel-control:hover {
+    color: #999; }
+
+.carousel-control.left {
+  left: 0;
+  background-image: none; }
+
+.carousel-control.right {
+  right: 0;
+  background-image: none; }
+
+.carousel-indicators {
+  width: auto;
+  position: fixed;
+  bottom: -5%;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0; }
+
+.carousel-indicators li {
+  border: 1px solid #666;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin: 0; }
+
+.carousel-indicators .active {
+  border: 1px solid #666;
+  background-color: #666;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin: 0; }
+
 #intro .section-header-img-wrapper {
   max-width: 400px;
   margin-bottom: 3rem; }
@@ -5202,6 +5342,8 @@ h3, .h3 {
     top: 50vh;
     left: 0;
     transform: translateY(-50%); }
+  #portfolio.portfolio-item--open .section-header {
+    display: none; }
   #portfolio.scrolling-this .section-header {
     position: fixed; }
   #portfolio.scrolled-this .section-header {
@@ -5228,6 +5370,17 @@ h3, .h3 {
     background-size: 100%;
     min-height: 320px;
     padding: 3.7rem 3rem; }
+  #portfolio .portfolio-item-details-wrapper {
+    display: none;
+    position: absolute;
+    max-width: 350px;
+    width: 31%;
+    top: 5%;
+    left: -30%; }
+  #portfolio.portfolio-item--open .portfolio-item-title-wrapper {
+    display: none; }
+  #portfolio.portfolio-item--open .portfolio-item-details-wrapper {
+    display: block; }
   #portfolio .portfolio-item-title-img {
     width: 100%;
     position: absolute;
@@ -5273,6 +5426,22 @@ h3, .h3 {
     position: absolute;
     top: -2.4rem;
     left: 4.2%; }
+  #portfolio .portfolio-item-img-full-wrapper {
+    position: absolute; }
+  #portfolio .portfolio-item-img-full {
+    width: 100%; }
+  #portfolio .portfolio-item-modal .modal-dialog {
+    width: 97%;
+    height: 90%;
+    max-width: none; }
+  #portfolio .portfolio-item-modal .modal-dialog {
+    width: 97%;
+    height: 90%;
+    max-width: none; }
+  #portfolio .portfolio-item-modal .portfolio-item-subtitle {
+    margin-bottom: 2rem;
+    font-family: "worksans-thin", sans-serif;
+    font-size: 1.8rem; }
   #portfolio .portfolio-item-bk .portfolio-item-desktop {
     position: absolute;
     top: 13%;
@@ -5308,6 +5477,54 @@ h3, .h3 {
   #portfolio .portfolio-item-bk .portfolio-item-title-wrapper {
     left: 72.8%;
     top: 11%; }
+  #portfolio .portfolio-item-bk .portfolio-item-modal .portfolio-item-modal-details-wrapper {
+    position: fixed;
+    left: 60px;
+    top: 60px;
+    width: 17%; }
+  #portfolio .portfolio-item-bk .portfolio-item-modal .portfolio-item-notebook {
+    position: fixed;
+    left: 16.3%;
+    top: 4%;
+    width: 82%;
+    max-width: none; }
+    #portfolio .portfolio-item-bk .portfolio-item-modal .portfolio-item-notebook .portfolio-item-img-full-wrapper {
+      top: 55px;
+      left: 12.5%;
+      right: 12.5%;
+      bottom: 193px; }
+    #portfolio .portfolio-item-bk .portfolio-item-modal .portfolio-item-notebook .wrapper {
+      width: 100%;
+      height: 100%; }
+  #portfolio .portfolio-item-bk .portfolio-item-modal .portfolio-item-mobile {
+    position: fixed;
+    left: 8%;
+    top: 45%;
+    width: 13%;
+    max-width: none; }
+    #portfolio .portfolio-item-bk .portfolio-item-modal .portfolio-item-mobile .portfolio-item-img-full-wrapper {
+      top: 50px;
+      left: 2.5%;
+      right: 2.5%;
+      bottom: 103px; }
+    #portfolio .portfolio-item-bk .portfolio-item-modal .portfolio-item-mobile .wrapper {
+      width: 100%;
+      height: 100%; }
+  #portfolio .portfolio-item-bk .portfolio-item-modal .portfolio-item-modal-close {
+    width: 150px;
+    height: 150px;
+    color: #666;
+    font-size: 7rem;
+    font-family: "worksans-thin", sans-serif;
+    position: fixed;
+    top: -30px;
+    right: -30px;
+    z-index: 1;
+    background: transparent;
+    border: none;
+    outline: none !important; }
+    #portfolio .portfolio-item-bk .portfolio-item-modal .portfolio-item-modal-close:hover, #portfolio .portfolio-item-bk .portfolio-item-modal .portfolio-item-modal-close:focus {
+      color: #999; }
   #portfolio .portfolio-item-vendomo .portfolio-item-desktop {
     position: absolute;
     top: 13%;
@@ -5695,8 +5912,7 @@ h3, .h3 {
     font-style: italic; }
   #experience .experience-reference-author {
     margin-bottom: 0;
-    position: relative;
-    font-weight: bold; }
+    position: relative; }
 
 .quote-open {
   vertical-align: baseline; }
@@ -5754,8 +5970,7 @@ h3, .h3 {
       outline: 0; }
   #about .about-interest-title {
     font-size: 2.4rem;
-    font-family: "worksans-thin", sans-serif;
-    text-align: center; }
+    font-family: "worksans-thin", sans-serif; }
   #about .about-interest-title-main {
     font-size: 3.6rem;
     font-family: "worksans-thin", sans-serif;
@@ -5764,9 +5979,7 @@ h3, .h3 {
     margin-top: 3rem;
     position: absolute;
     top: 27rem;
-    left: 34.4%;
-    right: 0;
-    text-align: center; }
+    left: 34.4%; }
   #about .about-photo {
     margin: auto;
     position: relative;
