--- a/src/scss/sections/_common.scss
+++ b/src/scss/sections/_common.scss
@@ -365,3 +365,167 @@ h3, .h3 {
     left: 9px;
   }
 }
+
+
+
+
+/**
+ * TrackpadScrollEmulator
+ * Author: Jonathan Nicol @f6design
+ * https://github.com/jnicol/trackpad-scroll-emulator
+ */
+
+.tse-scrollable { 
+  position: relative;
+  //width: 100%; /* Default value. Overwite this if you want. */
+  //height: 70%; /* Default value. Overwite this if you want. */
+  overflow: hidden;
+}
+.tse-scrollable .tse-scroll-content {
+  overflow: hidden;
+  overflow-y: scroll;
+}
+/* No longer using ::scrollbar too, since it breaks Chrome 25 */
+.tse-scrollable .tse-scroll-content::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+.tse-scrollbar {
+  z-index: 99;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  width: 11px;
+  display: block !important;
+}
+.tse-scrollbar .drag-handle {
+  position: absolute;
+  right: 2px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  min-height: 10px;
+  width: 7px;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s linear;
+  -moz-transition: opacity 0.2s linear;
+  -o-transition: opacity 0.2s linear;
+  -ms-transition: opacity 0.2s linear;
+  transition: opacity 0.2s linear;
+  background: #000;
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+}
+.tse-scrollbar:hover .drag-handle {
+  /* When hovered, remove all transitions from drag handle */
+  opacity: 0.5;
+  -webkit-transition: opacity 0 linear;
+  -moz-transition: opacity 0 linear;
+  -o-transition: opacity 0 linear;
+  -ms-transition: opacity 0 linear;
+  transition: opacity 0 linear;
+}
+.tse-scrollbar .drag-handle.visible {
+  opacity: 0.5;
+}
+/* Used when testing the scrollbar width */
+/* No longer using ::scrollbar too, since it breaks Chrome 25 */
+.scrollbar-width-tester::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+/* Horizontal scroller */
+.tse-scrollable.horizontal .tse-scroll-content {
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+.tse-scrollable.horizontal .tse-scroll-content::-webkit-scrollbar,
+.tse-scrollable.horizontal .tse-scroll-content::scrollbar {
+  width: auto;
+  height: 0;
+}
+.tse-scrollable.horizontal .tse-scrollbar {
+  top: auto;
+  left: 0;
+  width: auto;
+  height: 11px;
+}
+.tse-scrollable.horizontal .tse-scrollbar .drag-handle {
+  right: auto;
+  top: 2px;
+  height: 7px;
+  min-height: 0;
+  min-width: 10px;
+  width: auto;
+}
+
+
+// CAROUSEL
+
+.carousel-inner {
+  height: 100%;
+}
+
+// MODAL
+
+.modal-backdrop.in {
+  opacity: 1;
+}
+
+.modal-backdrop {
+  background-color: #fff;
+}
+
+.carousel-control {
+  position: fixed;
+  top: 48%;
+  color: #666;
+  text-shadow: none;
+  width: 90px;
+  height: 90px;
+  font-size: 9rem;
+  font-family: $font-family-work-sans-thin;
+  opacity: 1;
+
+  &:focus,
+  &:hover {
+    color: #999;
+  }
+}
+
+.carousel-control.left {
+  left: 0;
+  background-image: none;
+}
+
+.carousel-control.right {
+  right: 0;
+  background-image: none;
+}
+
+.carousel-indicators {
+  width: auto;
+  position: fixed;
+  bottom: -5%;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
+}
+
+.carousel-indicators li {
+  border: 1px solid #666;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin: 0;
+}
+
+.carousel-indicators .active {
+  border: 1px solid #666;
+  background-color: #666;
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  margin: 0;
+}
