--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -49,6 +49,12 @@
 
   &  .portfolio-item-img {
     width: 100%;
+    height: auto;
+  }
+
+  &  .portfolio-item-device-img {
+    width: 100%;
+    height: auto;
   }
 
   %portfolio-item {
@@ -174,7 +180,6 @@
     }
   }
 
-
   .portfolio-item-modal {
     & .modal-dialog {
       width: 97%;
@@ -189,140 +194,130 @@
     }
   }
 
+  .portfolio-item-eye-icon {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+  }
+
+  .portfolio-item-img-preview {
+    cursor: pointer;
+
+    &:hover,
+    &:focus {
+      cursor: pointer;
+
+      & .portfolio-item-img {
+        opacity: 0.4;
+      }
+
+      & .portfolio-item-eye-icon {
+        display: block;
+      }
+    }
+  }
+
+  .portfolio-item-img-full-label {
+    display: none;
+    position: absolute;
+    top: 5%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .active .portfolio-item-img-full-label {
+    display: block;
+  }
+
+
+  /////////  DEVICES  /////////
+
+  .portfolio-item-desktop {
+    position: absolute;
+    width: 60%;
+    max-width: 796px;
+
+    & .portfolio-item-img-preview {
+      position: absolute;
+      top: 5%;
+      left: 4.2%;
+      width: 93%;
+      max-width: 729px;
+    }
+  }
+
+  & .portfolio-item-tablet {
+    position: absolute;
+    width: 50%;
+    max-width: 263px;
+
+    & .portfolio-item-img-preview {
+      position: absolute;
+      top: 4.5%;
+      left: 7%;
+      width: 87%;
+      max-width: 227px;
+    }
+  }
+
+  & .portfolio-item-notebook {
+    position: absolute;
+    width: 50%;
+    max-width: 600px;
+
+    & .portfolio-item-img-preview {
+      position: absolute;
+      top: 5%;
+      left: 12.8%;
+      width: 75%;
+      max-width: 445px;
+    }
+  }
+
+  & .portfolio-item-mobile {
+    position: absolute;
+    width: 10%;
+    max-width: 111px;
+
+    & .portfolio-item-img-preview {
+      position: absolute;
+      top: 8.5%;
+      left: 4%;
+      width: 93%;
+      max-width: 101px;
+    }
+  }
+
   /////////  BK  /////////
 
   & .portfolio-item-bk {
     @extend %portfolio-item;
 
     & .portfolio-item-desktop {
-      position: absolute;
       top: 13%;
       left: 15%;
-      width: 60%;
-      max-width: 796px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 36.4%;
-      }
-
     }
 
     & .portfolio-item-tablet {
-      position: absolute;
       top: 44%;
       left: 11.5%;
-      width: 50%;
-      max-width: 263px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 44.5%;
-      }
     }
 
     & .portfolio-item-notebook {
-      position: absolute;
       top: 44.6%;
       left: 52%;
-      width: 50%;
-      max-width: 600px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 42.2%;
-      }
     }
 
     & .portfolio-item-mobile {
-      position: absolute;
       top: 60%;
       left: 6%;
-      width: 10%;
-      max-width: 111px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 45.5%;
-      }
-
-      & .portfolio-item-img-full {
-      }
     }
 
     & .portfolio-item-title-wrapper {
       left: 72.8%;
       top: 11%;
-    }
-
-    & .portfolio-item-modal {
-      & .portfolio-item-modal-details-wrapper {
-        position: fixed;
-        left: 60px;
-        top: 60px;
-        width: 17%;
-      }
-
-
-      & .portfolio-item-notebook {
-        position: fixed;
-        left: 16.3%;
-        top: 4%;
-        width: 82%;
-        max-width: none;
-
-        & .portfolio-item-img-full-wrapper {
-          top: 55px;
-          left: 12.5%;
-          right: 12.5%;
-          bottom: 193px;
-        }
-
-        & .wrapper {
-          width: 100%;
-          height: 100%;
-        }
-      }
-
-      & .portfolio-item-mobile {
-        position: fixed;
-        left: 8%;
-        top: 45%;
-        width: 13%;
-        max-width: none;
-
-        & .portfolio-item-img-full-wrapper {
-          top: 50px;
-          left: 2.5%;
-          right: 2.5%;
-          bottom: 103px;
-        }
-
-        & .wrapper {
-          width: 100%;
-          height: 100%;
-        }
-      }
-
-      & .portfolio-item-modal-close {
-        width: 150px;
-        height: 150px;
-        color: #666;
-        font-size: 7rem;
-        font-family: $font-family-work-sans-thin;
-        position: fixed;
-        top: -30px;
-        right: -30px;
-        z-index: 1;
-        background: transparent;
-        border: none;
-        outline: none !important;
-
-        &:hover,
-        &:focus {
-          color: #999;
-        }
-      }
     }
   }
 
@@ -333,55 +328,23 @@
     @extend %portfolio-item;
 
     & .portfolio-item-desktop {
-      position: absolute;
       top: 13%;
       left: 23%;
-      width: 60%;
-      max-width: 796px;
-
-      & .portfolio-item-img-preview {
-          @extend %portfolio-item-img-preview;
-          top: 36.4%;
-      }
     }
 
     & .portfolio-item-tablet {
-      position: absolute;
       top: 44%;
       left: 66%;
-      width: 50%;
-      max-width: 263px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 44.5%;
-      }
     }
 
     & .portfolio-item-notebook {
-      position: absolute;
       top: 44.6%;
       left: 0;
-      width: 50%;
-      max-width: 600px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 42.2%;
-      }
     }
 
     & .portfolio-item-mobile {
-      position: absolute;
       top: 60%;
       left: 82%;
-      width: 10%;
-      max-width: 111px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 45.5%;
-      }
     }
 
     & .portfolio-item-title-wrapper {
@@ -400,55 +363,23 @@
     @extend %portfolio-item;
 
     & .portfolio-item-desktop {
-      position: absolute;
       top: 13%;
       left: 8%;
-      width: 60%;
-      max-width: 796px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 36.4%;
-      }
     }
 
     & .portfolio-item-tablet {
-      position: absolute;
       top: 50%;
       left: 22%;
-      width: 50%;
-      max-width: 263px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 44.5%;
-      }
     }
 
     & .portfolio-item-notebook {
-      position: absolute;
       top: 44.6%;
       left: 49%;
-      width: 50%;
-      max-width: 600px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 42.2%;
-      }
     }
 
     & .portfolio-item-mobile {
-      position: absolute;
       top: 55.2%;
       left: 13%;
-      width: 10%;
-      max-width: 111px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 45.5%;
-      }
     }
 
     & .portfolio-item-title-wrapper {
@@ -467,55 +398,23 @@
     @extend %portfolio-item;
 
     & .portfolio-item-desktop {
-      position: absolute;
       top: 13%;
       left: 25%;
-      width: 60%;
-      max-width: 796px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 36.4%;
-      }
     }
 
     & .portfolio-item-tablet {
-      position: absolute;
       top: 44%;
       left: 72%;
-      width: 50%;
-      max-width: 263px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 44.5%;
-      }
     }
 
     & .portfolio-item-notebook {
-      position: absolute;
       top: 48.6%;
       left: 3%;
-      width: 50%;
-      max-width: 600px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 42.2%;
-      }
     }
 
     & .portfolio-item-mobile {
-      position: absolute;
       top: 55.2%;
       left: 62.8%;
-      width: 10%;
-      max-width: 111px;
-
-      & .portfolio-item-img-preview {
-        @extend %portfolio-item-img-preview;
-        top: 45.5%;
-      }
     }
 
     & .portfolio-item-title-wrapper {
@@ -834,4 +733,77 @@
       margin-top: 0.5rem;
     }
   }
+
+  /////////  MODAL  /////////
+
+  .portfolio-item-modal {
+    & .portfolio-item-modal-details-wrapper {
+      position: fixed;
+      left: 60px;
+      top: 60px;
+      width: 17%;
+    }
+
+
+    & .portfolio-item-notebook {
+      position: fixed;
+      left: 16.3%;
+      top: 4%;
+      width: 82%;
+      max-width: none;
+
+      & .portfolio-item-img-full-wrapper {
+        top: 56px;
+        left: 12.5%;
+        right: 12.5%;
+        bottom: 206px;
+      }
+
+      & .wrapper {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    & .portfolio-item-mobile {
+      position: fixed;
+      left: 8%;
+      top: 45%;
+      width: 13%;
+      max-width: none;
+
+      & .portfolio-item-img-full-wrapper {
+        top: 50px;
+        left: 2.5%;
+        right: 2.5%;
+        bottom: 103px;
+      }
+
+      & .wrapper {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    & .portfolio-item-modal-close {
+      width: 150px;
+      height: 150px;
+      color: #666;
+      font-size: 7rem;
+      font-family: $font-family-work-sans-thin;
+      position: fixed;
+      top: -30px;
+      right: -30px;
+      z-index: 1;
+      background: transparent;
+      border: none;
+      outline: none !important;
+
+      &:hover,
+      &:focus {
+        color: #999;
+      }
+    }
+  }
+
 }
