--- a/src/scss/sections/_skills.scss
+++ b/src/scss/sections/_skills.scss
@@ -53,7 +53,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    //animation: rotating 60s linear infinite;
+    animation: rotating 60s linear infinite;
   }
 
   & .skills-list {
